# Multi-Agent-Society

./: .gitignore  docker-compose.yaml  pyproject.toml  requirements.txt
app/agent/: decision.py  prompt_builder.py  relationship.py  runtime.py
app/core/: config.py
app/core/models/: __init__.py  agent.py  group.py  message.py  relationship.py
app/db/: session.py
app/engine/character/: assemble.py  cues.py  gating.py  loader.py  mbti_resources.py  models.py  mood.py
app/llm/: base.py  router.py
app/llm/providers/: anthropic.py  openai.py
configs/: global.yaml
configs/agents/: template.yaml
docs/: character-engine-porting-guide.md  development-plan.md  requirement.md
reference/mem0/: CLAUDE.md
resources/: foundations.md  personas.yaml
